# ICAS-Clicker-LIVE

./: CNAME  control.html  current-audio.html  debug.html  error  index.html  init.lua  ipad-control.html  pads-control.html  picker.html  score.html
Production_Hub_App/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Production_Hub_App/Production_hub.icon/: icon.json
Production_Hub_App/assets/: ProductionHub.icns
Production_Hub_App/debug_logs/propresenter/: presentation-active-chunked=true-stream-20260712-232103.jsonl  presentation-active-chunked=true-stream-20260712-232103.raw  slide-index-stream-20260712-231600.jsonl  slide-index-stream-20260712-231600.raw  slide-index-stream-20260712-231729.jsonl  slide-index-stream-20260712-231729.raw
Production_Hub_App/docs/: ARCHITECTURE.md  MANUAL_QA.md  MIGRATION_GUIDE.md
Production_Hub_App/production_hub/: __init__.py
Production_Hub_App/production_hub/api/: __init__.py  clicker_policy.py  dependencies.py  server.py
Production_Hub_App/production_hub/api/routes/: admin.py  (+7 more)
Production_Hub_App/production_hub/app/: __init__.py  bootstrap.py  lifecycle.py  main.py
Production_Hub_App/production_hub/core/: __init__.py
Production_Hub_App/production_hub/integrations/: base.py
Production_Hub_App/production_hub/state/: __init__.py  runtime_state.py  state_repository.py  undo_manager.py
Production_Hub_App/production_hub/tests/: __init__.py
Production_Hub_App/production_hub/ui/: main_window.py
Production_Hub_App/scripts/: build_macos_app.py  midi_listener.py  record_propresenter_slide_index_stream.py
(+113 files in other folders)
