[project]
name = "production-hub"
version = "0.1.0"
description = "Production automation, integrations, and diagnostics."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "PySide6>=6.7",
  "httpx>=0.27",
  "obsws-python>=1.7",
  "qrcode[pil]>=7.4",
  "pyobjc-framework-Quartz>=10.3; sys_platform == 'darwin'",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.10",
]
test = [
  "pytest>=8.2",
  "respx>=0.21",
]

[project.scripts]
production-hub = "production_hub.app.main:main"

[tool.pytest.ini_options]
testpaths = ["production_hub/tests"]
pythonpath = ["."]
